# Popper-v2

./: .gitignore  pyproject.toml
src/: demo.py
src/popper/: __init__.py  graph.py  nodeTypes.py
