[project]
name = "popper-v2"
version = "0.1.0"
description = "Rewrite of Popper with free-threading in Python"
authors = [
    {name = "Yash Solanki",email = "252yash@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "networkx (>=3.5,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
